Fixed text alignment on message screen , when sumbit state changed text is center aligned.

--- a/src/components/CardLayout.module.css
+++ b/src/components/CardLayout.module.css
@@ -4,5 +4,8 @@
   min-width: 32.7rem;
   border-radius: 3rem;
   padding: 3.2rem;
+}
+
+.textCenter {
   text-align: center;
 }
